--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-  />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Birthday Reveal</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
@@ -27,162 +25,250 @@
       touch-action: none;
     }
 
-    .app-hidden {
-      visibility: hidden;
+    .app-hidden { visibility: hidden; }
+
+    /* 🚀 Rocket */
+    .rocket {
+      position: absolute;
+      width: 3px;
+      height: 16px;
+      bottom: 0;
+      animation: rocket-fly 1100ms cubic-bezier(0.22, 0.61, 0.36, 1) forwards;
+      pointer-events: none;
     }
 
-    @media (orientation: landscape) {
-      .portrait-only { display: none; }
-      .landscape-message { display: flex; }
+    @keyframes rocket-fly {
+      from { transform: translateY(0); opacity: 1; }
+      to   { transform: translateY(var(--rise)); opacity: 0.95; }
     }
 
-    @media (orientation: portrait) {
-      .landscape-message { display: none; }
+    /* ✨ Explosion stars */
+    .star {
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      clip-path: polygon(
+        50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%,
+        50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%
+      );
+      animation: explode 850ms ease-out forwards;
+      pointer-events: none;
+    }
+
+    @keyframes explode {
+      0% { transform: scale(0.7); opacity: 1; }
+      100% {
+        transform: translate(var(--dx), var(--dy)) scale(1.15);
+        opacity: 0;
+      }
+    }
+
+    /* 🌟 Twinkle stars */
+    .twinkle {
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      border-radius: 50%;
+      opacity: 0;
+      animation: twinkle 2.4s ease-in-out forwards;
+      pointer-events: none;
+    }
+
+    @keyframes twinkle {
+      0% { opacity: 0; }
+      45% { opacity: 1; }
+      100% { opacity: 0; }
     }
   </style>
 </head>
 <body>
 
-  <div class="landscape-message hidden md:flex items-center justify-center h-screen text-white text-xl">
-    Please rotate to portrait mode 📱
-  </div>
+<div id="app" class="relative w-full h-screen overflow-hidden app-hidden">
 
-  <div id="app" class="portrait-only relative w-full h-screen overflow-hidden app-hidden">
+  <img
+    src="./assets/background.jpg"
+    class="absolute inset-0 w-full h-full object-cover pointer-events-none"
+    alt="Background"
+  />
 
-    <img
-      src="./assets/background.jpg"
-      class="absolute inset-0 w-full h-full object-cover"
-      style="z-index:0; pointer-events:none; transform:translateZ(0);"
-      alt="Background"
-    />
+  <div id="papers-container" class="absolute inset-0"></div>
+</div>
 
-    <div id="papers-container" class="absolute inset-0"></div>
-  </div>
+<script>
+/* ---------------- CONFIG ---------------- */
 
-  <script>
-    const papers = [
-      { src: './assets/paper1.png', z: 5, x: 0,   y: -90, scale: 1.1, rotation: -4 },
-      { src: './assets/paper2.png', z: 4, x: -28, y: 90,  scale: 1.1, rotation: 6  },
-      { src: './assets/paper3.png', z: 3, x: 40,  y: 62,  scale: 1.1, rotation: -7 },
-      { src: './assets/paper4.png', z: 2, x: -50, y: -26, scale: 1.9, rotation: 5  },
-      { src: './assets/paper5.png', z: 1, x: 14,  y: -95, scale: 1.4, rotation: -6 }
-    ];
+const papers = [
+  { src:'./assets/paper1.png', z:5, x:0, y:-90, scale:1.1, r:-4 },
+  { src:'./assets/paper2.png', z:4, x:-28, y:90, scale:1.1, r:6 },
+  { src:'./assets/paper3.png', z:3, x:40, y:62, scale:1.1, r:-7 },
+  { src:'./assets/paper4.png', z:2, x:-50, y:-26, scale:1.9, r:5 },
+  { src:'./assets/paper5.png', z:1, x:14, y:-95, scale:1.4, r:-6, trigger:true }
+];
 
-    const app = document.getElementById('app');
-    const container = document.getElementById('papers-container');
+const colors = [
+  '#ff4d4d','#ffd93d','#4dd2ff','#b266ff','#6dff6d',
+  '#ff9ff3','#ffa502','#70a1ff','#2ed573',
+  '#ff7f50','#a29bfe','#00cec9'
+];
 
-    let activePaper = null;
-    let pointers = new Map();
-    let startDistance = 0;
-    let startScale = 1;
-    let startX = 0, startY = 0;
+/* ---------------- STATE ---------------- */
 
-    function distance(p1, p2) {
-      return Math.hypot(p1.x - p2.x, p1.y - p2.y);
-    }
+const app = document.getElementById('app');
+const container = document.getElementById('papers-container');
 
-    function preloadImages(srcs) {
-      return Promise.all(
-        srcs.map(src => new Promise(res => {
-          const img = new Image();
-          img.src = src;
-          img.onload = res;
-          img.onerror = res;
-        }))
-      );
-    }
+let activePaper = null;
+let startX = 0, startY = 0;
+let fireworksStarted = false;
 
-    preloadImages(papers.map(p => p.src)).then(() => {
-      papers.forEach(p => {
-        const img = document.createElement('img');
+/* ---------------- DRAG ---------------- */
 
-        img.src = p.src;
-        img.style.position = 'absolute';
-        img.style.top = '50%';
-        img.style.left = '50%';
-        img.style.width = '40%';
-        img.style.zIndex = p.z;
+function endDrag(e) {
+  if (!activePaper) return;
+  if (e && e.clientX !== undefined) {
+    activePaper.baseX += e.clientX - startX;
+    activePaper.baseY += e.clientY - startY;
+  }
+  activePaper.style.transform = activePaper.baseTransform();
+  activePaper = null;
+}
 
-        img.baseX = p.x;
-        img.baseY = p.y;
-        img.scale = p.scale;
+window.addEventListener('blur', endDrag);
+document.addEventListener('mouseleave', endDrag);
 
-        img.baseTransform = () =>
-          `translate(-50%, -50%) translate(${img.baseX}px, ${img.baseY}px)
-           rotate(${p.rotation}deg) scale(${img.scale})`;
+/* ---------------- FIREWORKS ---------------- */
 
-        img.style.transform = img.baseTransform();
-        img.style.willChange = 'transform';
+function randColor() {
+  return colors[Math.floor(Math.random() * colors.length)];
+}
 
-        img.addEventListener('pointerdown', e => {
-          e.preventDefault();
-          activePaper = img;
-          img.setPointerCapture(e.pointerId);
-          pointers.set(e.pointerId, { x: e.clientX, y: e.clientY });
+function startFireworks() {
+  if (fireworksStarted) return;
+  fireworksStarted = true;
 
-          startX = e.clientX;
-          startY = e.clientY;
+  setInterval(launchMultipleRockets, 750);
+  setInterval(spawnTwinkle, 400);
+}
 
-          if (pointers.size === 2) {
-            const pts = [...pointers.values()];
-            startDistance = distance(pts[0], pts[1]);
-            startScale = img.scale;
-          }
+function launchMultipleRockets() {
+  const shots = 3; // ⬇ reduced to avoid face clutter
+  for (let i = 0; i < shots; i++) {
+    setTimeout(launchRocket, i * 120);
+  }
+}
 
-          img.style.filter = 'drop-shadow(0 10px 20px rgba(0,0,0,0.3))';
-        });
+function launchRocket() {
+  const rocket = document.createElement('div');
+  rocket.className = 'rocket';
 
-        img.addEventListener('pointermove', e => {
-          if (!activePaper || !pointers.has(e.pointerId)) return;
+  const x = Math.random() * window.innerWidth;
 
-          pointers.set(e.pointerId, { x: e.clientX, y: e.clientY });
+  // 🚫 avoid lower face zone
+  const rise = -(
+    window.innerHeight * (0.45 + Math.random() * 0.4)
+  );
 
-          if (pointers.size === 1) {
-            const dx = e.clientX - startX;
-            const dy = e.clientY - startY;
+  const color = randColor();
+  rocket.style.left = `${x}px`;
+  rocket.style.background = color;
+  rocket.style.setProperty('--rise', `${rise}px`);
 
-            activePaper.style.transform =
-              `${activePaper.baseTransform()} translate(${dx}px, ${dy}px) scale(1.04)`;
-          }
+  document.body.appendChild(rocket);
 
-          if (pointers.size === 2) {
-            const pts = [...pointers.values()];
-            const newDist = distance(pts[0], pts[1]);
-            const scaleFactor = newDist / startDistance;
+  // 💥 explode EXACTLY when rocket finishes
+  setTimeout(() => {
+    rocket.remove();
+    explode(x, window.innerHeight + rise, color);
+  }, 1100);
+}
 
-            activePaper.scale = Math.min(
-              3,
-              Math.max(0.5, startScale * scaleFactor)
-            );
+function explode(x, y, color) {
+  for (let i = 0; i < 10; i++) {
+    const star = document.createElement('div');
+    star.className = 'star';
+    star.style.left = `${x}px`;
+    star.style.top = `${y}px`;
+    star.style.background = color;
 
-            activePaper.style.transform = activePaper.baseTransform();
-          }
-        });
+    const angle = Math.random() * Math.PI * 2;
+    const dist = 16 + Math.random() * 20;
 
-        img.addEventListener('pointerup', e => {
-          pointers.delete(e.pointerId);
+    star.style.setProperty('--dx', `${Math.cos(angle)*dist}px`);
+    star.style.setProperty('--dy', `${Math.sin(angle)*dist}px`);
 
-          if (pointers.size === 0 && activePaper) {
-            const dx = e.clientX - startX;
-            const dy = e.clientY - startY;
+    document.body.appendChild(star);
+    setTimeout(() => star.remove(), 850);
+  }
+}
 
-            activePaper.baseX += dx;
-            activePaper.baseY += dy;
+function spawnTwinkle() {
+  const t = document.createElement('div');
+  t.className = 'twinkle';
+  t.style.left = `${Math.random()*window.innerWidth}px`;
+  t.style.top = `${Math.random()*window.innerHeight}px`;
+  t.style.background = randColor();
+  document.body.appendChild(t);
+  setTimeout(() => t.remove(), 2400);
+}
 
-            activePaper.style.transform = activePaper.baseTransform();
-            activePaper.style.filter = '';
-            activePaper = null;
-          }
-        });
+/* ---------------- INIT ---------------- */
 
-        container.appendChild(img);
-      });
+function preload(srcs) {
+  return Promise.all(srcs.map(s => new Promise(r => {
+    const i = new Image();
+    i.src = s;
+    i.onload = r;
+    i.onerror = r;
+  })));
+}
 
-      app.classList.remove('app-hidden');
+preload(papers.map(p => p.src)).then(() => {
+  papers.forEach(p => {
+    const img = document.createElement('img');
+    img.src = p.src;
+
+    img.style.position = 'absolute';
+    img.style.top = '50%';
+    img.style.left = '50%';
+    img.style.width = '40%';
+    img.style.zIndex = p.z;
+
+    img.baseX = p.x;
+    img.baseY = p.y;
+    img.scale = p.scale;
+
+    img.baseTransform = () =>
+      `translate(-50%,-50%) translate(${img.baseX}px,${img.baseY}px)
+       rotate(${p.r}deg) scale(${img.scale})`;
+
+    img.style.transform = img.baseTransform();
+
+    img.addEventListener('pointerdown', e => {
+      e.preventDefault();
+      activePaper = img;
+      startX = e.clientX;
+      startY = e.clientY;
+      img.setPointerCapture(e.pointerId);
+      if (p.trigger) startFireworks();
     });
 
-    document.addEventListener('contextmenu', e => e.preventDefault());
-  </script>
+    img.addEventListener('pointermove', e => {
+      if (!activePaper) return;
+      const dx = e.clientX - startX;
+      const dy = e.clientY - startY;
+      activePaper.style.transform =
+        `${activePaper.baseTransform()} translate(${dx}px,${dy}px) scale(1.04)`;
+    });
+
+    img.addEventListener('pointerup', endDrag);
+    img.addEventListener('pointercancel', endDrag);
+    img.addEventListener('lostpointercapture', endDrag);
+
+    container.appendChild(img);
+  });
+
+  app.classList.remove('app-hidden');
+});
+</script>
 
 </body>
 </html>
