--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
       -webkit-user-drag: none;
       background-color: transparent !important;
       touch-action: none;
+      will-change: transform;
     }
-
-    .app-hidden { visibility: hidden; }
 
     /* 🚀 Rocket */
     .rocket {
@@ -35,6 +34,7 @@
       bottom: 0;
       animation: rocket-fly 1100ms cubic-bezier(0.22, 0.61, 0.36, 1) forwards;
       pointer-events: none;
+      will-change: transform;
     }
 
     @keyframes rocket-fly {
@@ -53,6 +53,7 @@
       );
       animation: explode 850ms ease-out forwards;
       pointer-events: none;
+      will-change: transform;
     }
 
     @keyframes explode {
@@ -83,8 +84,9 @@
 </head>
 <body>
 
-<div id="app" class="relative w-full h-screen overflow-hidden app-hidden">
+<div id="app" class="relative w-full h-screen overflow-hidden">
 
+  <!-- FIXED BACKGROUND -->
   <img
     src="./assets/background.jpg"
     class="absolute inset-0 w-full h-full object-cover pointer-events-none"
@@ -113,33 +115,28 @@ const colors = [
 
 /* ---------------- STATE ---------------- */
 
-const app = document.getElementById('app');
 const container = document.getElementById('papers-container');
 
 let activePaper = null;
 let startX = 0, startY = 0;
 let fireworksStarted = false;
 
-/* ---------------- DRAG ---------------- */
+// pinch
+let pointers = new Map();
+let startDistance = 0;
+let startScale = 1;
 
-function endDrag(e) {
-  if (!activePaper) return;
-  if (e && e.clientX !== undefined) {
-    activePaper.baseX += e.clientX - startX;
-    activePaper.baseY += e.clientY - startY;
-  }
-  activePaper.style.transform = activePaper.baseTransform();
-  activePaper = null;
+/* ---------------- HELPERS ---------------- */
+
+function distance(p1, p2) {
+  return Math.hypot(p1.x - p2.x, p1.y - p2.y);
 }
-
-window.addEventListener('blur', endDrag);
-document.addEventListener('mouseleave', endDrag);
-
-/* ---------------- FIREWORKS ---------------- */
 
 function randColor() {
   return colors[Math.floor(Math.random() * colors.length)];
 }
+
+/* ---------------- FIREWORKS (UNCHANGED) ---------------- */
 
 function startFireworks() {
   if (fireworksStarted) return;
@@ -150,7 +147,7 @@ function startFireworks() {
 }
 
 function launchMultipleRockets() {
-  const shots = 3; // ⬇ reduced to avoid face clutter
+  const shots = 3;
   for (let i = 0; i < shots; i++) {
     setTimeout(launchRocket, i * 120);
   }
@@ -161,20 +158,15 @@ function launchRocket() {
   rocket.className = 'rocket';
 
   const x = Math.random() * window.innerWidth;
-
-  // 🚫 avoid lower face zone
-  const rise = -(
-    window.innerHeight * (0.45 + Math.random() * 0.4)
-  );
-
+  const rise = -(window.innerHeight * (0.45 + Math.random() * 0.4));
   const color = randColor();
+
   rocket.style.left = `${x}px`;
   rocket.style.background = color;
   rocket.style.setProperty('--rise', `${rise}px`);
 
   document.body.appendChild(rocket);
 
-  // 💥 explode EXACTLY when rocket finishes
   setTimeout(() => {
     rocket.remove();
     explode(x, window.innerHeight + rise, color);
@@ -210,63 +202,79 @@ function spawnTwinkle() {
   setTimeout(() => t.remove(), 2400);
 }
 
-/* ---------------- INIT ---------------- */
+/* ---------------- INIT PAPERS + PINCH ---------------- */
 
-function preload(srcs) {
-  return Promise.all(srcs.map(s => new Promise(r => {
-    const i = new Image();
-    i.src = s;
-    i.onload = r;
-    i.onerror = r;
-  })));
-}
+papers.forEach(p => {
+  const img = document.createElement('img');
+  img.src = p.src;
 
-preload(papers.map(p => p.src)).then(() => {
-  papers.forEach(p => {
-    const img = document.createElement('img');
-    img.src = p.src;
+  img.style.position = 'absolute';
+  img.style.top = '50%';
+  img.style.left = '50%';
+  img.style.width = '40%';
+  img.style.zIndex = p.z;
 
-    img.style.position = 'absolute';
-    img.style.top = '50%';
-    img.style.left = '50%';
-    img.style.width = '40%';
-    img.style.zIndex = p.z;
+  img.baseX = p.x;
+  img.baseY = p.y;
+  img.scale = p.scale;
 
-    img.baseX = p.x;
-    img.baseY = p.y;
-    img.scale = p.scale;
-
-    img.baseTransform = () =>
+  img.updateTransform = () => {
+    img.style.transform =
       `translate(-50%,-50%) translate(${img.baseX}px,${img.baseY}px)
        rotate(${p.r}deg) scale(${img.scale})`;
+  };
 
-    img.style.transform = img.baseTransform();
+  img.updateTransform();
 
-    img.addEventListener('pointerdown', e => {
-      e.preventDefault();
-      activePaper = img;
-      startX = e.clientX;
-      startY = e.clientY;
-      img.setPointerCapture(e.pointerId);
-      if (p.trigger) startFireworks();
-    });
+  img.addEventListener('pointerdown', e => {
+    e.preventDefault();
+    img.setPointerCapture(e.pointerId);
+    pointers.set(e.pointerId, { x:e.clientX, y:e.clientY });
+    activePaper = img;
 
-    img.addEventListener('pointermove', e => {
-      if (!activePaper) return;
-      const dx = e.clientX - startX;
-      const dy = e.clientY - startY;
-      activePaper.style.transform =
-        `${activePaper.baseTransform()} translate(${dx}px,${dy}px) scale(1.04)`;
-    });
+    startX = e.clientX;
+    startY = e.clientY;
 
-    img.addEventListener('pointerup', endDrag);
-    img.addEventListener('pointercancel', endDrag);
-    img.addEventListener('lostpointercapture', endDrag);
+    if (pointers.size === 2) {
+      const pts = [...pointers.values()];
+      startDistance = distance(pts[0], pts[1]);
+      startScale = img.scale;
+    }
 
-    container.appendChild(img);
+    if (p.trigger) startFireworks();
   });
 
-  app.classList.remove('app-hidden');
+  img.addEventListener('pointermove', e => {
+    if (!pointers.has(e.pointerId)) return;
+    pointers.set(e.pointerId, { x:e.clientX, y:e.clientY });
+
+    if (pointers.size === 1 && activePaper) {
+      img.baseX += e.clientX - startX;
+      img.baseY += e.clientY - startY;
+      startX = e.clientX;
+      startY = e.clientY;
+      img.updateTransform();
+    }
+
+    if (pointers.size === 2) {
+      const pts = [...pointers.values()];
+      const d = distance(pts[0], pts[1]);
+      img.scale = Math.min(3, Math.max(0.5, startScale * (d / startDistance)));
+      img.updateTransform();
+    }
+  });
+
+  img.addEventListener('pointerup', e => {
+    pointers.delete(e.pointerId);
+    if (pointers.size === 0) activePaper = null;
+  });
+
+  img.addEventListener('pointercancel', () => {
+    pointers.clear();
+    activePaper = null;
+  });
+
+  container.appendChild(img);
 });
 </script>
 
