--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       -webkit-user-drag: none;
       background-color: transparent !important;
       touch-action: none;
-      will-change: transform;
     }
+
+    .app-hidden { visibility: hidden; }
 
     /* 🚀 Rocket */
     .rocket {
@@ -34,7 +35,6 @@
       bottom: 0;
       animation: rocket-fly 1100ms cubic-bezier(0.22, 0.61, 0.36, 1) forwards;
       pointer-events: none;
-      will-change: transform;
     }
 
     @keyframes rocket-fly {
@@ -53,7 +53,6 @@
       );
       animation: explode 850ms ease-out forwards;
       pointer-events: none;
-      will-change: transform;
     }
 
     @keyframes explode {
@@ -84,9 +83,8 @@
 </head>
 <body>
 
-<div id="app" class="relative w-full h-screen overflow-hidden">
+<div id="app" class="relative w-full h-screen overflow-hidden app-hidden">
 
-  <!-- FIXED BACKGROUND -->
   <img
     src="./assets/background.jpg"
     class="absolute inset-0 w-full h-full object-cover pointer-events-none"
@@ -115,28 +113,33 @@ const colors = [
 
 /* ---------------- STATE ---------------- */
 
+const app = document.getElementById('app');
 const container = document.getElementById('papers-container');
 
 let activePaper = null;
 let startX = 0, startY = 0;
 let fireworksStarted = false;
 
-// pinch
-let pointers = new Map();
-let startDistance = 0;
-let startScale = 1;
+/* ---------------- DRAG ---------------- */
 
-/* ---------------- HELPERS ---------------- */
-
-function distance(p1, p2) {
-  return Math.hypot(p1.x - p2.x, p1.y - p2.y);
+function endDrag(e) {
+  if (!activePaper) return;
+  if (e && e.clientX !== undefined) {
+    activePaper.baseX += e.clientX - startX;
+    activePaper.baseY += e.clientY - startY;
+  }
+  activePaper.style.transform = activePaper.baseTransform();
+  activePaper = null;
 }
+
+window.addEventListener('blur', endDrag);
+document.addEventListener('mouseleave', endDrag);
+
+/* ---------------- FIREWORKS ---------------- */
 
 function randColor() {
   return colors[Math.floor(Math.random() * colors.length)];
 }
-
-/* ---------------- FIREWORKS (UNCHANGED) ---------------- */
 
 function startFireworks() {
   if (fireworksStarted) return;
@@ -202,81 +205,66 @@ function spawnTwinkle() {
   setTimeout(() => t.remove(), 2400);
 }
 
-/* ---------------- INIT PAPERS + PINCH ---------------- */
+/* ---------------- INIT ---------------- */
 
-papers.forEach(p => {
-  const img = document.createElement('img');
-  img.src = p.src;
+function preload(srcs) {
+  return Promise.all(srcs.map(s => new Promise(r => {
+    const i = new Image();
+    i.src = s;
+    i.onload = r;
+    i.onerror = r;
+  })));
+}
 
-  img.style.position = 'absolute';
-  img.style.top = '50%';
-  img.style.left = '50%';
-  img.style.width = '40%';
-  img.style.zIndex = p.z;
+preload(papers.map(p => p.src)).then(() => {
+  papers.forEach(p => {
+    const img = document.createElement('img');
+    img.src = p.src;
 
-  img.baseX = p.x;
-  img.baseY = p.y;
-  img.scale = p.scale;
+    img.style.position = 'absolute';
+    img.style.top = '50%';
+    img.style.left = '50%';
+    img.style.width = '40%';
+    img.style.zIndex = p.z;
 
-  img.updateTransform = () => {
-    img.style.transform =
+    img.baseX = p.x;
+    img.baseY = p.y;
+    img.scale = p.scale;
+
+    img.baseTransform = () =>
       `translate(-50%,-50%) translate(${img.baseX}px,${img.baseY}px)
        rotate(${p.r}deg) scale(${img.scale})`;
-  };
 
-  img.updateTransform();
+    img.style.transform = img.baseTransform();
 
-  img.addEventListener('pointerdown', e => {
-    e.preventDefault();
-    img.setPointerCapture(e.pointerId);
-    pointers.set(e.pointerId, { x:e.clientX, y:e.clientY });
-    activePaper = img;
-
-    startX = e.clientX;
-    startY = e.clientY;
-
-    if (pointers.size === 2) {
-      const pts = [...pointers.values()];
-      startDistance = distance(pts[0], pts[1]);
-      startScale = img.scale;
-    }
-
-    if (p.trigger) startFireworks();
-  });
-
-  img.addEventListener('pointermove', e => {
-    if (!pointers.has(e.pointerId)) return;
-    pointers.set(e.pointerId, { x:e.clientX, y:e.clientY });
-
-    if (pointers.size === 1 && activePaper) {
-      img.baseX += e.clientX - startX;
-      img.baseY += e.clientY - startY;
+    img.addEventListener('pointerdown', e => {
+      e.preventDefault();
+      activePaper = img;
       startX = e.clientX;
       startY = e.clientY;
-      img.updateTransform();
-    }
+      img.setPointerCapture(e.pointerId);
+      if (p.trigger) startFireworks();
+    });
 
-    if (pointers.size === 2) {
-      const pts = [...pointers.values()];
-      const d = distance(pts[0], pts[1]);
-      img.scale = Math.min(3, Math.max(0.5, startScale * (d / startDistance)));
-      img.updateTransform();
-    }
+    img.addEventListener('pointermove', e => {
+      if (!activePaper) return;
+      const dx = e.clientX - startX;
+      const dy = e.clientY - startY;
+      activePaper.style.transform =
+        `${activePaper.baseTransform()} translate(${dx}px,${dy}px) scale(1.04)`;
+    });
+
+    img.addEventListener('pointerup', endDrag);
+    img.addEventListener('pointercancel', endDrag);
+    img.addEventListener('lostpointercapture', endDrag);
+
+    container.appendChild(img);
   });
 
-  img.addEventListener('pointerup', e => {
-    pointers.delete(e.pointerId);
-    if (pointers.size === 0) activePaper = null;
-  });
-
-  img.addEventListener('pointercancel', () => {
-    pointers.clear();
-    activePaper = null;
-  });
-
-  container.appendChild(img);
+  app.classList.remove('app-hidden');
 });
 </script>
 
 </body>
 </html>
+
