--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       -webkit-user-drag: none;
       background-color: transparent !important;
       touch-action: none;
+      transition: transform 0.15s ease;
+      will-change: transform;
     }
-
-    .app-hidden { visibility: hidden; }
 
     /* 🚀 Rocket */
     .rocket {
@@ -83,7 +83,7 @@
 </head>
 <body>
 
-<div id="app" class="relative w-full h-screen overflow-hidden app-hidden">
+<div id="app" class="relative w-full h-screen overflow-hidden">
 
   <img
     src="./assets/background.jpg"
@@ -113,50 +113,36 @@ const colors = [
 
 /* ---------------- STATE ---------------- */
 
-const app = document.getElementById('app');
 const container = document.getElementById('papers-container');
 
 let activePaper = null;
-let startX = 0, startY = 0;
 let fireworksStarted = false;
 
-/* 👉 PINCH STATE (ADDED) */
+// pinch
 let pointers = new Map();
 let startDistance = 0;
 let startScale = 1;
 
-/* ---------------- DRAG ---------------- */
+// drag offset
+let offsetX = 0;
+let offsetY = 0;
 
-function endDrag(e) {
-  if (!activePaper) return;
-  if (e && e.clientX !== undefined) {
-    activePaper.baseX += e.clientX - startX;
-    activePaper.baseY += e.clientY - startY;
-  }
-  activePaper.style.transform = activePaper.baseTransform();
-  activePaper = null;
-}
+/* ---------------- HELPERS ---------------- */
 
-window.addEventListener('blur', endDrag);
-document.addEventListener('mouseleave', endDrag);
+const dist = (a, b) => Math.hypot(a.x - b.x, a.y - b.y);
+const randColor = () => colors[Math.random() * colors.length | 0];
 
 /* ---------------- FIREWORKS ---------------- */
-
-function randColor() {
-  return colors[Math.floor(Math.random() * colors.length)];
-}
 
 function startFireworks() {
   if (fireworksStarted) return;
   fireworksStarted = true;
-
   setInterval(launchMultipleRockets, 750);
   setInterval(spawnTwinkle, 400);
 }
 
 function launchMultipleRockets() {
-  const shots = 3;
-  for (let i = 0; i < shots; i++) {
+  for (let i = 0; i < 3; i++) {
     setTimeout(launchRocket, i * 120);
   }
 }
@@ -165,8 +151,8 @@ function launchRocket() {
   const rocket = document.createElement('div');
   rocket.className = 'rocket';
 
-  const x = Math.random() * window.innerWidth;
-  const rise = -(window.innerHeight * (0.45 + Math.random() * 0.4));
+  const x = Math.random() * innerWidth;
+  const rise = -(innerHeight * (0.45 + Math.random() * 0.4));
   const color = randColor();
 
   rocket.style.left = `${x}px`;
@@ -177,7 +163,7 @@ function launchRocket() {
 
   setTimeout(() => {
     rocket.remove();
-    explode(x, window.innerHeight + rise, color);
+    explode(x, innerHeight + rise, color);
   }, 1100);
 }
 
@@ -189,11 +175,11 @@ function explode(x, y, color) {
     star.style.top = `${y}px`;
     star.style.background = color;
 
-    const angle = Math.random() * Math.PI * 2;
-    const dist = 16 + Math.random() * 20;
+    const a = Math.random() * Math.PI * 2;
+    const d = 16 + Math.random() * 20;
 
-    star.style.setProperty('--dx', `${Math.cos(angle)*dist}px`);
-    star.style.setProperty('--dy', `${Math.sin(angle)*dist}px`);
+    star.style.setProperty('--dx', `${Math.cos(a)*d}px`);
+    star.style.setProperty('--dy', `${Math.sin(a)*d}px`);
 
     document.body.appendChild(star);
     setTimeout(() => star.remove(), 850);
@@ -203,8 +189,8 @@ function explode(x, y, color) {
 function spawnTwinkle() {
   const t = document.createElement('div');
   t.className = 'twinkle';
-  t.style.left = `${Math.random()*window.innerWidth}px`;
-  t.style.top = `${Math.random()*window.innerHeight}px`;
+  t.style.left = `${Math.random()*innerWidth}px`;
+  t.style.top = `${Math.random()*innerHeight}px`;
   t.style.background = randColor();
   document.body.appendChild(t);
   setTimeout(() => t.remove(), 2400);
@@ -212,101 +198,85 @@ function spawnTwinkle() {
 
 /* ---------------- INIT ---------------- */
 
-function preload(srcs) {
-  return Promise.all(srcs.map(s => new Promise(r => {
-    const i = new Image();
-    i.src = s;
-    i.onload = r;
-    i.onerror = r;
-  })));
-}
+papers.forEach(p => {
+  const img = document.createElement('img');
+  img.src = p.src;
 
-preload(papers.map(p => p.src)).then(() => {
-  papers.forEach(p => {
-    const img = document.createElement('img');
-    img.src = p.src;
+  img.style.position = 'absolute';
+  img.style.left = '50%';
+  img.style.top = '50%';
+  img.style.width = '40%';
+  img.style.zIndex = p.z;
 
-    img.style.position = 'absolute';
-    img.style.top = '50%';
-    img.style.left = '50%';
-    img.style.width = '40%';
-    img.style.zIndex = p.z;
+  img.baseX = p.x;
+  img.baseY = p.y;
+  img.scale = p.scale;
 
-    img.baseX = p.x;
-    img.baseY = p.y;
-    img.scale = p.scale;
-
-    img.baseTransform = () =>
-      `translate(-50%,-50%) translate(${img.baseX}px,${img.baseY}px)
+  img.update = (lift = 0) => {
+    img.style.transform =
+      `translate(-50%,-50%) translate(${img.baseX}px,${img.baseY - lift}px)
        rotate(${p.r}deg) scale(${img.scale})`;
+  };
 
-    img.style.transform = img.baseTransform();
+  img.update();
 
-    img.addEventListener('pointerdown', e => {
-      e.preventDefault();
-      img.setPointerCapture(e.pointerId);
-      activePaper = img;
-      startX = e.clientX;
-      startY = e.clientY;
+  img.addEventListener('pointerdown', e => {
+    e.preventDefault();
+    img.setPointerCapture(e.pointerId);
+    activePaper = img;
 
-      pointers.set(e.pointerId, { x:e.clientX, y:e.clientY });
+    const rect = img.getBoundingClientRect();
+    offsetX = e.clientX - (rect.left + rect.width / 2);
+    offsetY = e.clientY - (rect.top + rect.height / 2);
 
-      if (pointers.size === 2) {
-        const pts = [...pointers.values()];
-        startDistance = Math.hypot(
-          pts[0].x - pts[1].x,
-          pts[0].y - pts[1].y
-        );
-        startScale = img.scale;
-      }
+    pointers.set(e.pointerId, { x:e.clientX, y:e.clientY });
 
-      if (p.trigger) startFireworks();
-    });
+    if (pointers.size === 2) {
+      const pts = [...pointers.values()];
+      startDistance = dist(pts[0], pts[1]);
+      startScale = img.scale;
+    }
 
-    img.addEventListener('pointermove', e => {
-      if (!pointers.has(e.pointerId)) return;
-      pointers.set(e.pointerId, { x:e.clientX, y:e.clientY });
+    img.update(8); // lift only
 
-      if (pointers.size === 1 && activePaper) {
-        const dx = e.clientX - startX;
-        const dy = e.clientY - startY;
-        activePaper.style.transform =
-          `${activePaper.baseTransform()} translate(${dx}px,${dy}px) scale(1.04)`;
-      }
-
-      if (pointers.size === 2) {
-        const pts = [...pointers.values()];
-        const d = Math.hypot(
-          pts[0].x - pts[1].x,
-          pts[0].y - pts[1].y
-        );
-        img.scale = Math.min(3, Math.max(0.5, startScale * (d / startDistance)));
-        img.style.transform = img.baseTransform();
-      }
-    });
-
-    img.addEventListener('pointerup', e => {
-      pointers.delete(e.pointerId);
-      if (pointers.size === 0) endDrag(e);
-    });
-
-    img.addEventListener('pointercancel', () => {
-      pointers.clear();
-      endDrag();
-    });
-
-    img.addEventListener('lostpointercapture', () => {
-      pointers.clear();
-      endDrag();
-    });
-
-    container.appendChild(img);
+    if (p.trigger) startFireworks();
   });
 
-  app.classList.remove('app-hidden');
+  img.addEventListener('pointermove', e => {
+    if (!pointers.has(e.pointerId)) return;
+    pointers.set(e.pointerId, { x:e.clientX, y:e.clientY });
+
+    if (pointers.size === 1 && activePaper) {
+      img.baseX = e.clientX - innerWidth/2 - offsetX;
+      img.baseY = e.clientY - innerHeight/2 - offsetY;
+      img.update(8);
+    }
+
+    if (pointers.size === 2) {
+      const pts = [...pointers.values()];
+      const d = dist(pts[0], pts[1]);
+      img.scale = Math.min(3, Math.max(0.5, startScale * (d / startDistance)));
+      img.update(8);
+    }
+  });
+
+  img.addEventListener('pointerup', e => {
+    pointers.delete(e.pointerId);
+    if (pointers.size === 0) {
+      img.update(0);
+      activePaper = null;
+    }
+  });
+
+  img.addEventListener('pointercancel', () => {
+    pointers.clear();
+    img.update(0);
+    activePaper = null;
+  });
+
+  container.appendChild(img);
 });
 </script>
 
 </body>
 </html>
-
